--- a/colaboration-app/src/component/Addpost.css
+++ b/colaboration-app/src/component/Addpost.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    background-color: #f4f4f9;
+    background-color: #c6e5e9;
     color: #333;
   }
   
