--- a/colaboration-app/src/component/Home.css
+++ b/colaboration-app/src/component/Home.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f4f7fc;
+  /* background-color: #f4f7fc; */
 }
 
 h1 {
