--- a/colaboration-app/src/component/Login.css
+++ b/colaboration-app/src/component/Login.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f4f7fc;
+  background-color:transparent;
 }
 
 .login-form {
