--- a/colaboration-app/src/component/ShowPosts.css
+++ b/colaboration-app/src/component/ShowPosts.css
@@ -19,7 +19,7 @@ body {
   max-width: 1000px;
   width: 100%;
   padding: 20px;
-  background-color: #fff;
+  background-color: #b8d8e2;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   text-align: center;
@@ -27,7 +27,7 @@ body {
 
 h1 {
   font-size: 36px;
-  color: #333;
+  color: white;
   margin-bottom: 20px;
 }
 
@@ -72,7 +72,8 @@ h1 {
 .like-btn,
 .comment-btn {
   padding: 10px 20px;
-  margin-top: 10px;
+  margin: 10px;
+
   background-color: #4caf50;
   color: white;
   border: none;
